<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background1"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1BFFFFFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/text_20"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_80sdp"
            android:text="@string/login"
            android:textColor="@color/blue_login"
            android:textStyle="bold"
            />

        <TextView
            style="@style/text_20"
            android:text="@string/welcome"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:textAlignment="center"
            android:layout_margin="@dimen/_25sdp"
            />


        <EditText
            android:id="@+id/main_email"
            style="@style/edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/_5sdp"
            />

        <EditText
            android:id="@+id/main_password"
            style="@style/edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/_5sdp"
            />


        <TextView
            android:id="@+id/main_forget_password"
            style="@style/text_16"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/forget_password"
            android:textColor="@color/blue_login"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/_20sdp"
            />



        <TextView
            android:id="@+id/main_create_account"
            style="@style/text_16"
            android:text="@string/create_new_account"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            />

        <Button
            android:id="@+id/main_login"
            style="@style/button_18"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/login_button"
            android:layout_marginBottom="@dimen/_30sdp"
            app:backgroundTint="@null"
            />

    </LinearLayout>

</FrameLayout>